# naga-monorepo-v1-final

./: .audit-ci.json  .coderabbit.yml  .env.example  .env.production.example  .gitignore  .gitlab-ci-simple.yml  .gitlab-ci.yml  .nxrc.json  .pipeline-test  .prettierignore  .vscodeignore  AUTHELIA_INTEGRATION.md  CLAUDE.md  IMPLEMENTATION_DECISIONS.md  IMPLEMENTATION_SUMMARY.md  Makefile  OPERATIONS.md  OPERATIONS_RUNBOOK.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_COMPLETION_SUMMARY.md  REACT_ARCHITECTURE.md  REACT_SIGNIN_IMPLEMENTATION_SPEC.md  README.md  REAL_STAFF_WEB_MIGRATION_ANALYSIS.md  STAFF_WEB_V2_COMPLETE_IMPLEMENTATION.md  STAFF_WEB_V2_DESIGN.md  STAFF_WEB_V2_MIGRATION_SPEC.md  analyze-apps.js  app-analysis-report.html  capture-screenshots.js  dependency-graph.json  docker-compose.staff-web-production.yml  nx-commands-raycast.md  nx.json  package-lock.json  package.json  project.json  pyproject.toml  reorganize.sh  settings_merged.json  (+4 more)
backend/: .env.eval  .gitignore  .pre-commit-config.yaml.disabled  AGENTS.md  README.md  SQLITE_TESTING_GUIDE.md  TEST_PLAN.md  claude-mcp-config.json  conftest.py  deploy-evaluation.sh  justfile.old  monitor-mypy-cleanup.sh  mypy.ini  mypy_core_output.txt  mypy_full_output.txt  mypy_output.txt  naga-sis-prototype.html  package-lock.json  package.json  pbcopy  pyproject.toml  run_receipt_pipeline.py  run_staff_import.sh  simple_name_parser_test.py  tailwind.config.js  test_enhanced_cleaning.py  test_login.py  test_name_parser_integration.py  test_pipeline.py
backend/.devcontainer/: devcontainer.json.example
backend/.envs/: .test-postgres
backend/.envs/.evaluation/: .postgres
backend/.envs/.local/: .django  .postgres
backend/.githooks/: pre-commit.disabled
backend/.github/workflows/: test-suite.yml
backend/api/: __init__.py
backend/api/tests/: test_api_contracts.py
backend/api/v1/: __init__.py  attendance.py  auth.py  finance.py  grading.py  khmer_names.py  people.py  permissions.py  schemas.py
backend/api/v2/: __init__.py  academics.py  analytics.py  communications.py  documents.py  finance.py  innovation.py  schemas.py
backend/apps/academic/: __init__.py  apps.py  canonical_models.py  canonical_services.py  factories.py
backend/apps/academic_records/: __init__.py  apps.py  constants.py  services.py  urls.py
backend/apps/accounts/: README.md  admin.py  mixins.py  services.py
backend/apps/analytics/: __init__.py
backend/apps/attendance/: ATTENDANCE_DOCUMENTATION.md  README.md  admin.py  constants.py  models.py
backend/apps/common/: README.md  README_ADMIN.md  admin.py  admin_audit.py  admin_mixins.py  api_auth.py  audit_decorators.py  auth_backends.py  context_processors.py  forms.py  mixins.py  models.py  override_decorators.py
backend/apps/curriculum/: apps.py  services.py
backend/apps/data_pipeline/: AUDITOR_TOOLS_USAGE.md  CROSS_TABLE_OPTIMIZATION.md  QUICK_START.md  README.md  __init__.py
backend/apps/enrollment/: PROGRAM_TRANSITION_USAGE.md  constants.py  consumers.py  models_enhanced.py  models_progression.py  progression_builder.py  services.py  services_audit_example.py
backend/apps/finance/: DOCUMENTATION_INDEX.md  FINANCE_DEVELOPER_GUIDE.md  admin.py  consumers.py  forms.py  signals.py  urls.py
backend/apps/grading/: __init__.py  gpa.py  services.py  utils.py
backend/apps/language/: __init__.py  enums.py  models.py  services.py  utils.py
backend/apps/leave_management/: admin.py  constants.py
backend/apps/level_testing/: Testee flow  admin.py  fee_service.py  finance_integration.py  models.py  printing.py  services.py  services_payment.py  signals.py  urls.py  views.py  views_payment_first.py
backend/apps/mobile/: apps.py  services.py
backend/apps/moodle/: README.md  admin.py  models.py  tasks.py
backend/apps/people/: __init__.py  admin.py  apps.py  forms.py  models.py  services.py  urls.py  views_audit_example.py
backend/apps/scheduling/: README.md  SYSTEM_CHANGES_NEEDED.md  admin_templates.py  services.py  signals.py  urls.py  views.py  (+1 more)
backend/claudedocs/: mobile_development_guide.md  simplified_program_status.md  sis_programdates_analysis.md
backend/config/: api.py  database_router.py  dramatiq_app.py  graphql_urls.py  legacy_urls.py  routing.py  urls.py
backend/data/: canonical_requirements_backup_20250710_174805.json  rooms_fixture.json
backend/docs/: API_V2_DOCUMENTATION.md
backend/fixtures/: academic_data.json  admin_data.json  auth_data.json  contenttypes_data.json  curriculum_terms.json  enrollment_data.json  level_testing_data.json  people_data.json  scheduling_data.json  scholarships_data.json  sites_data.json
backend/integrity_reports/: analysis.json  db_as_models.py
backend/mobile/: package-lock.json  package.json
backend/project-docs/: ADMIN_FEE_DOCUMENT_QUOTA_SPEC.md  DATABASE-INTEGRITY-MAINTENANCE.md  IDEMPOTENT_STUDENT_MIGRATION_GUIDE.md  LEVEL_TESTING_REDESIGN.md  STUDENT_PHOTO_IMPLEMENTATION.md  TEST_AUDIT.md  TEST_REWRITE_PLAN.md  WARNING.md  academic-progression-implementation-plan.md  academic-progression-summary.md  data-pipeline-stage-5-demo-report.md  database-integrity-report-20250806_190204.md  historical-discount-analysis.md  khmer-name-approximation-design.md  management-command-categorization.md  migration-circular-dependency-analysis.md  pending_architectural_decisions_250709.md  policy-migration-analysis.md  smart_batch_processor_analysis.md  unified-api-v1-status.md  web-interface-migration-summary.md
backend/qa/: ratchet.sh
backend/scripts/: README.md  deploy-all.sh  fix_migration_state.py  generate_fixtures.py  handle_extra_columns.py  mypy-new-files-ci.sh  opus_integrity_analysis.py  reconcile_models.py  reset_migrations.sh  run_comprehensive_tests.sh  test_graphql_endpoints.py
backend/templates/: 404.html  base.html  base_crud.html  base_minimal.html  base_new2.html  base_optimized.html
backend/testing/: PRODUCTION_READINESS_CHECKLIST.md
backend/tests/: conftest.py  test_api_v2.py
backend/tests_legacy/: README.md  test_factories.py  utils.py
backend/users/: apps.py  managers.py  models.py  tasks.py  views.py
(+3454 files in other folders)
